# PluginTemplate

./: SimplePlugin.sln
SimplePlugin/: CMakeLists.txt  SimplePlugin.vcxproj  SimplePlugin.vcxproj.filters  dllmain.cpp
